[package]
name = "runt"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4"
nix = "0.17"
serde = "1.0"
serde_json ="1.0"
serde_derive ="1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.1"
